<resources>
    <string name="app_name">EinkBro</string>
    <string name="list_empty">Current list is empty.</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="album_title_history">History</string>
    <string name="album_title_home">Home</string>
    <string name="search_hint">Search</string>
    <string name="search_settings_hint">Search settings…</string>
    <string name="main_menu_new_tab">New tab in background</string>
    <string name="main_menu_new_tabOpen">New tab</string>
    <string name="main_omnibox_input_hint">Search or type URL</string>
    <string name="menu_open_with">Open link with…</string>
    <string name="menu_quit">Quit</string>
    <string name="menu_openFav">Open homepage</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_delete_list">Delete list</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_closeTab">Close tab</string>
    <string name="menu_download">Downloads</string>
    <string name="menu_fav">Save as homepage</string>
    <string name="menu_sc">Shortcut on home screen</string>
    <string name="menu_share_link">Share link</string>
    <string name="menu_save_screenshot">Save screenshot</string>
    <string name="menu_save_bookmark">Save as bookmark</string>
    <string name="menu_save_as">Save as…</string>
    <string name="menu_save_pdf">Save as PDF</string>
    <string name="menu_shareClipboard">Copy to clipboard</string>
    <string name="menu_other_searchSite">Search on site</string>
    <string name="audio_only_mode">Audio only</string>
    <string name="menu_other_info">About EinkBro</string>
    <string name="dialog_title_hint">Title:</string>
    <string name="dialog_url_hint">URL:</string>
    <string name="dialog_extension_hint">Extension (for example: \".jpg\"):</string>
    <string name="dialog_title_download">Do you want to download the file?</string>
    <string name="dialog_content_resubmission">Would you like to resubmit your data?</string>
    <string name="setting_label">Settings</string>
    <string name="setting_title_clear_control">Data Control</string>
    <string name="setting_title_start_control">Start Control</string>
    <string name="setting_title_search_engine">Search engine</string>
    <string name="setting_summary_search_engine">Choose a search engine</string>
    <string name="setting_summary_search_engine_google">Google</string>
    <string name="setting_summary_search_engine_duckduckgo">DuckDuckGo</string>
    <string name="setting_summary_search_engine_startpage">Startpage</string>
    <string name="setting_summary_search_engine_startpage_de">Startpage (de)</string>
    <string name="setting_summary_search_engine_bing">Bing</string>
    <string name="setting_summary_search_engine_yahoo">Yahoo!</string>
    <string name="setting_summary_search_engine_baidu">Baidu</string>
    <string name="setting_summary_search_engine_yandex">Yandex</string>
    <string name="setting_summary_search_engine_rambler">Rambler</string>
    <string name="setting_summary_search_engine_searx">Searx</string>
    <string name="setting_summary_search_engine_qwant">Qwant</string>
    <string name="setting_summary_search_engine_ecosia">Ecosia</string>
    <string name="setting_title_font_size">Font size</string>
    <string name="setting_summary_font_size">Change font size for displaying websites</string>
    <string name="setting_title_remote">Remote content</string>
    <string name="setting_summary_remote">Enable remote content that doesn\'t come directly from the website you are visiting.
        Disabling this will increase security level, speed and will save data volume, but some content will not be displayed anymore</string>
    <string name="setting_title_save_data">Request \'Save Data\'</string>
    <string name="setting_summary_save_data">Tell websites that you would prefer to save data. Supported websites will load faster</string>
    <string name="setting_title_images">Images</string>
    <string name="setting_summary_images">Enable network images. Disabling could be useful for saving mobile data and loading
        websites faster</string>
    <string name="setting_title_cookie">Cookies</string>
    <string name="setting_summary_cookie">Enable Cookies. Cookies are small text files, which are stored on your device. Websites
        use them, for instance, to store user settings (e.g. search settings) but they could also be used to collect personal
        user data. Third party cookies (they collect user data for advertising) are always disabled</string>
    <string name="setting_summary_cookie_delete">If enabled, all cookies will be deleted, including cookies of trusted websites</string>
    <string name="setting_title_whitelistCookie">Cookie whitelist</string>
    <string name="setting_summary_whitelistCookie">If you disabled Cookies you can use this whitelist to allow sites you
        trust to use save cookies</string>
    <string name="setting_title_javascript">JavaScript</string>
    <string name="setting_summary_javascript">Enable JavaScript. Many websites need JavaScript for their functionality (menus,
        loading and displaying images and more) but it can also be used for attacks</string>
    <string name="setting_title_whitelistJS">JavaScript Whitelist</string>
    <string name="setting_summary_whitelistJS">If you disabled JavaScript you can use this whitelist to allow sites you
        trust to use JavaScript</string>
    <string name="setting_title_adblock">AdBlock</string>
    <string name="setting_summary_adblock">Enable AdBlock to block annoying ads. Sites will load faster with it enabled</string>
    <string name="setting_title_whitelist">AdBlock whitelist</string>
    <string name="setting_summary_whitelist">Allow these sites to show ads. Some sites will not work if AdBlock is enabled</string>
    <string name="setting_title_location">Location</string>
    <string name="setting_summary_location">Allow websites to access your location. Some websites (like Google Maps for navigation)
        need this enabled</string>
    <string name="setting_title_history">History</string>
    <string name="setting_summary_history">Save the history of visited websites</string>
    <string name="save_history_mode_save_when_open">Save on tab open</string>
    <string name="save_history_mode_save_when_close">Save on tab close</string>
    <string name="save_history_mode_disabled">Do not save</string>
    <string name="data_summary">All files will be exported to the \"Android/data/info.plateaukao.einkbro/files/browser_backup/\"
        directory of your sd-card. This directory will be DELETED if you uninstall EinkBro so make backups regularly in safe place</string>
    <string name="clear_title_quit">Clear on app exit</string>
    <string name="clear_summary_quit">Every time you quit EinkBro all checked above data will be deleted</string>
    <string name="clear_title_cache">Clear Cache</string>
    <string name="clear_title_cookie">Clear Cookies</string>
    <string name="clear_title_history">Clear History</string>
    <string name="clear_title_indexedDB">Clear \"Indexed Databases\" and \"Local WebView Storage\"</string>
    <string name="clear_title_deleteDatabase">Delete database</string>
    <string name="clear_summary_deleteDatabase">Delete the whole database (start page, bookmarks, history and all whitelists)</string>
    <string name="setting_title_ui">Appearance</string>
    <string name="setting_title_data">Backup</string>
    <string name="setting_title_fav">Favorite</string>
    <string name="setting_title_searchEngine">Custom search engine</string>
    <string name="setting_title_userAgent">Custom User Agent</string>
    <string name="setting_title_toolbar">Toolbar / Statusbar</string>
    <string name="setting_section_toolbar">Toolbar</string>
    <string name="setting_section_statusbar">Statusbar</string>
    <string name="setting_section_typography">Typography</string>
    <string name="setting_section_advanced">Advanced</string>
    <string name="site_settings_overrides_count">%1$d override</string>
    <string name="site_settings_overrides_count_plural">%1$d overrides</string>
    <string name="default_value_hint">default</string>
    <string name="setting_title_hideToolbar">Hide toolbar</string>
    <string name="setting_summary_hide">Use the whole screen when scrolling through websites. To leave fullscreen mode press Back button</string>
    <string name="setting_title_statusbar_enabled">Show statusbar when toolbar is hidden</string>
    <string name="setting_summary_statusbar_enabled">A slim bar with time, page info, battery, wifi, and pagination status</string>
    <string name="setting_title_statusbar_position">Statusbar position</string>
    <string name="setting_title_statusbar_items">Statusbar items</string>
    <string name="setting_title_nav">Navigation button</string>
    <string name="setting_title_nav_pos">Floating Button position</string>
    <string name="setting_summary_nav_pos">Decide where the \"Navigation Button\" will be placed</string>
    <string name="setting_gestures_use_title">Use gestures on floating button</string>
    <string name="setting_gestures_use_summary">Swipe on \"floating button\" to execute actions</string>
    <string name="setting_gesture_up">Swipe up</string>
    <string name="setting_gesture_down">Swipe down</string>
    <string name="setting_gesture_left">Swipe left</string>
    <string name="setting_gesture_right">Swipe right</string>
    <string name="setting_title_export_appData">Export app data</string>
    <string name="setting_summary_export_appData">Export app data (History, Bookmarks)
        and your personal settings</string>
    <string name="setting_title_import_appData">Import app data</string>
    <string name="title_appData">App data</string>
    <string name="whitelist_edit_hint">Domain</string>
    <string name="whitelist_add">Add</string>
    <string name="setting_summary_desktop">Support desktop mode of website</string>
    <string name="bold_font">Bold font</string>
    <string name="setting_summary_bold_font">Apply bold font style (need to reload current page)</string>
    <string name="desktop_mode">Desktop mode</string>
    <string name="setting_title_page_left_value">Page reserved height</string>
    <string name="setting_summary_page_left_value">How much height should be reserved when turning to next page(e.g., 50, or 10%)</string>
    <string name="setting_title_export_bookmarks">Export bookmarks</string>
    <string name="setting_title_import_bookmarks">Import bookmarks</string>
    <string name="setting_title_process_text">Custom external search URL</string>
    <string name="dark_mode">Dark mode</string>
    <string name="setting_summary_dark_mode">Configure dark mode</string>
    <string name="font_custom">Select custom font file</string>
    <string name="setting_title_font">Font</string>
    <string name="font_type">Font Type</string>
    <string name="setting_clear_recent_bookmarks">Clear recent bookmark list</string>
    <string name="setting_summary_clear_recent_bookmarks">Clear recently used bookmark list</string>
    <string name="always_enable_zoom">Always enable content zooming</string>
    <string name="setting_summary_enable_zoom">Force some website content to be zoomable</string>
    <string name="setting_title_plus_behavior">New tab behavior</string>
    <string name="setting_summary_plus_behavior">What should be displayed when adding a new tab</string>
    <string name="setting_title_translated_langs">Translation languages for Google Translate</string>
    <string name="setting_summary_translated_langs">Customize languages for translation (e.g. en, fr, de, zh-TW, zh-CN)</string>
    <string name="instapaper_username_hint">Username or Email</string>
    <string name="instapaper_password_hint">Password</string>
    <string name="instapaper_create_account">Create account</string>
</resources>