<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:klyph="http://schemas.android.com/apk/res-auto">

        <info.plateaukao.einkbro.preference.IntegerEditTextPreference
            android:defaultValue="80"
            android:icon="@drawable/ic_page_height"
            android:key="sp_page_turn_left_value"
            android:summary="@string/setting_summary_page_left_value"
            android:title="@string/setting_title_page_left_value" />

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/setting_entries_dark_mode"
            android:entryValues="@array/setting_values_dark_mode"
            android:icon="@drawable/ic_dark_mode"
            android:key="sp_dark_mode"
            android:summary="@string/setting_summary_dark_mode"
            android:title="@string/dark_mode" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:icon="@drawable/icon_desktop"
            android:key="sp_desktop"
            android:summary="@string/setting_summary_desktop"
            android:title="@string/desktop_mode" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_enable_zoom"
            android:key="sp_enable_zoom"
            android:summary="@string/setting_summary_enable_zoom"
            android:title="@string/always_enable_zoom" />

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/setting_entries_plus_behavior"
            android:entryValues="@array/setting_values_plus_behavior"
            android:icon="@drawable/icon_plus"
            android:key="sp_plus_behavior"
            android:summary="@string/setting_summary_plus_behavior"
            android:title="@string/setting_title_plus_behavior" />

        <Preference
            android:icon="@drawable/ic_bookmarks"
            android:key="sp_clear_recent_bookmarks"
            android:summary="@string/setting_summary_clear_recent_bookmarks"
            android:title="@string/setting_clear_recent_bookmarks" />


        <ListPreference
            android:defaultValue="0"
            android:entries="@array/setting_entries_nav_pos"
            android:entryValues="@array/setting_values_nav_pos"
            android:icon="@drawable/icon_arrow_expand"
            android:key="nav_position"
            android:summary="@string/setting_summary_nav_pos"
            android:title="@string/setting_title_nav_pos" />

        <EditTextPreference
            android:defaultValue=""
            android:icon="@drawable/ic_translate"
            android:key="sp_translated_langs"
            android:summary="@string/setting_summary_translated_langs"
            android:title="@string/setting_title_translated_langs" />

</PreferenceScreen>