<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference android:summary="@string/data_summary" />

    <PreferenceCategory android:title="@string/title_appData">
        <Preference
            android:key="data_exDB"
            android:icon="@drawable/icon_export"
            android:title="@string/setting_title_export_appData"
            android:summary="@string/setting_summary_export_appData"/>
        <Preference
            android:key="data_imDB"
            android:icon="@drawable/icon_import"
            android:title="@string/setting_title_import_appData"/>
        <Preference
            android:key="data_export_bookmarks"
            android:icon="@drawable/icon_bookmark"
            android:title="@string/setting_title_export_bookmarks"/>
        <Preference
            android:key="data_import_bookmarks"
            android:icon="@drawable/icon_bookmark"
            android:title="@string/setting_title_import_bookmarks"/>
    </PreferenceCategory>
</PreferenceScreen>