<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="20dp"
    android:paddingStart="20dp"
    android:paddingTop="15dp"
    tools:ignore="Autofill">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/dialog_instapaper_username"
            android:selectAllOnFocus="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:hint="@string/instapaper_username_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/dialog_instapaper_password"
            android:selectAllOnFocus="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:hint="@string/instapaper_password_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/dialog_instapaper_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/instapaper_create_account"
        android:textColor="?android:attr/textColorLink"
        android:textSize="14sp"
        android:clickable="true"
        android:focusable="true"
        android:background="?android:attr/selectableItemBackground" />

</LinearLayout>